# crypto-momentum-bot

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_BOOTSTRAP.md  README.md  pyproject.toml
.claude/skills/bitgak-analysis/: SKILL.md
.claude/skills/handoff/: SKILL.md
.github/workflows/: doc-sync.yml
Skills/Common/: infra_debug.md  rules.md
config/: bitget.yaml  default.yaml  live.yaml  paper.yaml
data/grid/: BTCUSDT_1d.csv  BTCUSDT_1h.csv  BTCUSDT_4h.csv  DOGEUSDT_1d.csv  DOGEUSDT_1h.csv  DOGEUSDT_4h.csv  PEPEUSDT_1d.csv  PEPEUSDT_1h.csv  PEPEUSDT_4h.csv  SOLUSDT_1d.csv  SOLUSDT_1h.csv  SOLUSDT_4h.csv  WIFUSDT_1d.csv  WIFUSDT_1h.csv  WIFUSDT_4h.csv  XRPUSDT_1d.csv  XRPUSDT_1h.csv  XRPUSDT_4h.csv
deploy/: com.btcbot.live.plist  com.btcbot.paper.plist  install.sh  logrotate.conf
doc/: INDEX.md  README.md  skill-define.md
doc/domains/automation/: rules.md
doc/domains/security/: rules.md
doc/domains/trading/: rules.md
doc/skills/: audit-log.md  blog-automation.md  bot-ops.md  infra-debug.md  progressive-gate.md  signal-validation.md  skill_apple_silicon_backtest.md  skill_harness_scaffolder.md  skill_macro_liquidity_indicators.md  skill_meta_generator.md  skill_nasdaq_session_handling.md  system-health.md
results/turtle_bot/m1/: ANALYSIS.md  summary.json  trades.jsonl
scripts/: backtest_c2_combo.py  backtest_l3_exits.py  backtest_martingale.py  check_connectivity.py  check_doc_sync.py  fetch_grid_klines.py  pnl.py  replay.py  sim_l3_exits.py
scripts/turtle_m1_backtest/: backtest.py  decompose.py  fetch_bitget.py
src/bot/: __init__.py  cli.py  main.py
src/bot/backtest/: metrics.py  runner.py  walkforward.py
src/bot/config/: loader.py  schema.py
src/bot/core/: clock.py  enums.py  logging.py  types.py
src/bot/data/: bar_builder.py  cache.py  fetcher.py  indicators.py  pipeline_oi_funding.py  (+4 more)
src/martingale_bot/: README.md  __init__.py  config.py  engine.py  grid.py
src/turtle_bot/: README.md  __init__.py  backtest.py  config.py  engine.py
tests/integration/: test_backtest_e2e.py  test_paper_trade_e2e.py
tests/unit/: test_bar_builder.py  test_bitget_gateway.py  test_confluence.py  test_guard.py  test_indicators.py  test_risk_config.py  test_sizer.py  test_spoof_filter.py  test_stops.py  test_strategy_momentum.py  test_trail.py
(+43 files in other folders)
