[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.1.0"
description = "Crypto momentum/trend trading bot (Upbit spot, expandable to Binance Futures)"
requires-python = ">=3.11"
dependencies = [
  "pyupbit>=0.2.34",
  "pandas>=2.2",
  "numpy>=1.26",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "structlog>=24.1",
  "typer>=0.12",
  "tenacity>=8.2",
  "pyarrow>=15.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
backtest = ["vectorbt>=0.26"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
  "hypothesis>=6.100",
]
binance = ["python-binance>=1.0"]

[project.scripts]
bot = "bot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
